# educational-pdf-generator

./: README.md  pyproject.toml
src/educational_pdf_generator/: __init__.py  models.py  pdf.py  server.py
tests/: test_app.py
