[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "educational-pdf-generator"
version = "1.0.0"
description = "Educational PDF generator service"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
